# AEC_2026_triage_app

./: .gitignore  API_INTEGRATION.md  DEPLOYMENT.md  README.md  deploy-all.bat  package-lock.json  patientClass.h  start_system.bat
Backend/: .dockerignore  CMakeLists.txt  DOCKER_README.md  Dockerfile  GMAIL_SETUP.md  circularQueue.cpp  circularQueue.h  deploy.bat  deploy.sh  handshakeReceive.cpp  handshakeSend.cpp  main.cpp  patientClass.h  sample_data.txt  test_circularQueue.cpp  test_json.cpp
Backend/crow/: TinySHA1.hpp  app.h  common.h  compression.h  http_connection.h  http_request.h  http_server.h  json.h  mustache.h  routing.h  socket_adaptors.h  websocket.h
Case Documentation/: Documentation_Link.txt  sample_data.txt
Frontend/: front-back-relation.md
Submitting Files/: link-to-word.md
frontend/: .env.development  .env.example  .env.production  .firebaserc  README.md  deploy.bat  firebase.json  package-lock.json  package.json
frontend/.firebase/: hosting.YnVpbGQ.cache
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  translations.js
frontend/src/components/: HealthCardScanner.js  PatientIntake.js  StaffDashboard.js  TextToSpeech.js  VoiceInput.js  VoiceInputUniversal.js
frontend/src/services/: api.js  gemini.js  ocrService.js
